# uniPay

./: README.md
Tars-rs/: .gitignore  Cargo.toml
Tars-rs/crates/api/: Cargo.toml  README.md
Tars-rs/crates/api/src/: errors.rs  lib.rs  primitives.rs  utils.rs
Tars-rs/crates/bitcoin/: Cargo.toml  README.md
Tars-rs/crates/bitcoin/src/: lib.rs  merry.rs  network.rs  relay.rs  test_utils.rs
Tars-rs/crates/bitcoin/src/batcher/: batch_tx.rs  batcher.rs  fee.rs  mod.rs  primitives.rs  sign.rs  size.rs  traits.rs  validate.rs
Tars-rs/crates/bitcoin/src/fee_providers/: blockstream.rs  constants.rs  fixed.rs  mempool.rs  mod.rs  multi.rs  primitives.rs  traits.rs
Tars-rs/crates/bitcoin/src/htlc/: hash.rs  htlc.rs  mod.rs  primitives.rs  script.rs  sig.rs  tx.rs  validate.rs  witness.rs
Tars-rs/crates/bitcoin/src/indexer/: indexer.rs  mod.rs  primitives.rs  traits.rs
Tars-rs/crates/evm/: Cargo.toml  README.md
Tars-rs/crates/evm/abi/: distributor.json  htlc.json  htlcv2.json  htlcv3.json
Tars-rs/crates/evm/src/: errors.rs  executor.rs  lib.rs  multicall.rs  primitives.rs  relay.rs  test_utils.rs  traits.rs
Tars-rs/crates/evm/src/events/: events.rs  mod.rs  primitives.rs
Tars-rs/crates/evm/src/htlc/: common.rs  mod.rs  native.rs  nativev2.rs  nativev3.rs  traits.rs  v1.rs  v2.rs  v3.rs
Tars-rs/crates/evm/src/tx_handler/: mod.rs  primitives.rs  traits.rs  utils.rs
Tars-rs/crates/fiat/: Cargo.toml
Tars-rs/crates/fiat/src/: errors.rs  fiat_fetcher.rs  lib.rs  test_utils.rs
Tars-rs/crates/orderbook/: Cargo.toml  README.md
Tars-rs/crates/orderbook/src/: deadpool.rs  errors.rs  lib.rs  order_credentials.rs  order_mapper.rs  orderbook.rs  pending_orders.rs  pending_orders_with_cache.rs  primitives.rs  test_utils.rs  traits.rs
Tars-rs/crates/policy/: Cargo.toml  README.md
Tars-rs/crates/policy/src/: collections.rs  common.rs  errors.rs  lib.rs  policy.rs  primitives.rs  solver_policy.rs
Tars-rs/crates/primitives/: Cargo.toml  README.md
Tars-rs/crates/primitives/src/: chains.rs  errors.rs  lib.rs  primitives.rs
Tars-rs/crates/quote/: Cargo.toml
Tars-rs/crates/quote/src/: lib.rs  primitives.rs  quote.rs
Tars-rs/crates/utils/: Cargo.toml  README.md
Tars-rs/crates/utils/src/: traces.rs  utils.rs
Tars-rs/scripts/: services.sh
Tars-rs/src/: lib.rs
btc-executor/: .gitignore  Cargo.toml
btc-executor/migrations/: 20260324000000_create_bitcoin_wallet_requests.sql
btc-executor/src/: errors.rs  lib.rs  main.rs  orders.rs  settings.rs  timestamp.rs
btc-executor/src/executor/: execution_request.rs  mod.rs
btc-executor/src/infrastructure/: mod.rs
btc-executor/src/infrastructure/chain/bitcoin/: mod.rs  (+1 more)
btc-executor/src/infrastructure/keys/: mod.rs
btc-executor/src/infrastructure/persistence/: bitcoin_wallet.rs  mod.rs
btc-executor/tests/: bitcoin_suite.rs
btc-executor/tests/bitcoin/: batcher_regtest.rs  common.rs  esplora_api_regtest.rs  executor_regtest.rs  mod.rs  primitives.rs  tx_adaptor_regtest.rs
btc-watcher/: .gitignore  Cargo.toml  Dockerfile  README.md
btc-watcher/.gitea/workflows/: docker-build-push.yml  docker-release.yml
btc-watcher/src/: main.rs  settings.rs
btc-watcher/src/adapters/: indexer.rs  mod.rs  moka_cache.rs  rpc.rs  screener.rs  swap_store.rs  zmq_events.rs
btc-watcher/src/core/: mod.rs  types.rs
btc-watcher/src/core/watcher/: address_poller.rs  block_processor.rs  mod.rs  pending_swaps.rs  tx_event.rs  tx_processor.rs  update_confirmations.rs  watcher.rs
evm-executor/: .gitignore  Cargo.toml  Dockerfile  README.md  local.settings.toml
evm-executor/.woodpecker/: multi-arch-build.yml
evm-executor/src/: main.rs  orders.rs  settings.rs
evm-executor/src/executor/: block_numbers.rs  mod.rs
evm-watcher/: Cargo.toml
evm-watcher/.woodpecker/: multi-arch-build.yml
evm-watcher/src/: block_range.rs  main.rs  prepare_event.rs  primitives.rs  settings.rs  stream_event.rs  testutils.rs  validate_event.rs  validate_swap.rs
evm-watcher/src/onchain_orders/: mod.rs  multicall.rs  orders.rs  primitives.rs
evm-watcher/src/swaps/: mod.rs  primitives.rs  store.rs
evm-watcher/src/watcher/: mod.rs  multi.rs  primitives.rs  watcher.rs
initia-executor/: .gitignore  Cargo.toml  config.example.toml
initia-executor/src/: api.rs  htlc.rs  initiator.rs  main.rs  orders.rs  redeemer.rs  refunder.rs  settings.rs
initia-watcher/: .gitignore  Cargo.toml  config.toml.example
initia-watcher/src/: config.rs  errors.rs  events.rs  main.rs
initia-watcher/src/storage/: mod.rs  pg_store.rs
initia-watcher/src/watcher/: htlc_watcher.rs  manager.rs  mod.rs
orderbook/: .gitignore  Cargo.toml
orderbook/cli/: README.md  config.example.json  package-lock.json  package.json  tsconfig.json
orderbook/cli/src/: api.ts  bitcoin.ts  config.ts  evm.ts  main.ts  orderbook.ts  types.ts
orderbook/src/: app_state.rs  common.rs  error.rs  lib.rs  main.rs
orderbook/src/config/: mod.rs  policy.rs  settings.rs  solver.rs  strategy.rs
orderbook/src/liquidity/: fetchers.rs  mod.rs  primitives.rs  watcher.rs
orderbook/src/metadata/: assets.rs  chains.rs  mod.rs
orderbook/src/orders/: matching.rs  mod.rs  service.rs  types.rs
orderbook/src/pricing/: computation.rs  mapping.rs  mod.rs  service.rs  types.rs
orderbook/src/pricing/aggregators/: cmc.rs  coingecko.rs  mod.rs
orderbook/src/pricing/exchanges/: binance.rs  hyperliquid.rs
orderbook/src/quote/: matcher.rs  mod.rs  service.rs  types.rs
orderbook/src/read_api/: mod.rs  service.rs
orderbook/src/registry/: mod.rs  pairs.rs  policy_builder.rs  strategies.rs
orderbook/src/server/: handlers.rs  mod.rs  response.rs  routes.rs  types.rs
orderbook/tests/: policy_builder.rs  policy_config.rs  settings_policy_path.rs
solver-orders/: .gitignore  Cargo.toml  Dockerfile  README.md  localnet.settings.toml
solver-orders/.gitea/workflows/: release.yml
solver-orders/.github/workflows/: docker-build-push.yml
solver-orders/.woodpecker/: multi-arch-build.yml
solver-orders/src/: cache.rs  main.rs
solver-orders/src/server/: handlers.rs  handlers_test.rs  mod.rs
(+202 files in other folders)
