[package]
name = "btc-executor"
version = "0.1.0"
edition = "2024"

[features]
persistence-store-tests = []

[dependencies]
async-trait = "0.1.89"
bigdecimal = { version = "0.4", features = ["serde"] }
bitcoin = { version = "0.32", features = ["rand-std", "serde"] }
config = "0.15.8"
eyre = "0.6.12"
hex = "0.4"
moka = { version = "0.12.10", features = ["future"] }
reqwest = "0.12.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "uuid",
    "time",
    "rust_decimal",
    "json",
] }
thiserror = "1.0.63"
tars = { git = "https://github.com/TARS-Finance/Tars-rs", rev = "2baeff0f7c5cb83a06e5fbb258414c374707dbf6", features = [
    "api",
    "bitcoin",
    "fiat",
    "orderbook",
    "orderbook-test-utils",
    "primitives",
] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }

[dev-dependencies]
ctor = "0.4"
dotenvy = "0.15"
rand = "0.10.0"
serial_test = "3"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
wiremock = "0.6.3"
