[package]
name = "bit-indexer-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
eyre = "0.6.12"
tars = { git = "https://github.com/TARS-Finance/Tars-rs.git", rev = "788492ad8f9ef346ca8a8635576b2dbc1aee6c13", features = [
    "orderbook",
    "orderbook-test-utils",
    "bitcoin",
    "utils",
    "primitives"
] }

# tars = { path = "../tars-rs", features = [
#     "orderbook",
#     "orderbook-test-utils",
#     "bitcoin",
#     "utils",
#     "primitives"
# ] }

sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "derive",
    "macros",
    "bigdecimal",
    "chrono",
    "json",
] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.219"
bitcoin = "0.32.4"
tokio = { version = "1.36.0", features = ["full" , "rt"] }
moka = { version = "0.12.10", features = ["future"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zeromq = "0.5.0"
hex = "0.4.3"
futures = "0.3"
vault = { package = "vault-rs", git = "https://version.btcfi.wtf/hashiraio/vault-rs.git", rev = "7ee31ecf3657c3d1b39d9c404de0803981fa9f47" }
screener = { package = "trm-labs", git = "https://version.btcfi.wtf/hashiraio/screener-rs", rev = "454754b625882ebd97e4881eed9f4d8a79cf7378" }
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
num-traits = "0.2"


[dev-dependencies]
serial_test = "3.2.0"
