[package]
name = "evm-executor"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "0.8.23"
alloy = { version = "1.0.7", features = [
    "full",
    "node-bindings",
    "eip712",
    "providers",
] }
tokio = { version = "1.36.0", features = ["full"] }
tars = { git = "https://github.com/TARS-Finance/Tars-rs", rev = "2baeff0f7c5cb83a06e5fbb258414c374707dbf6", features = [
    "orderbook",
    "api",
    "fiat",
    "utils",
    "orderbook-test-utils",
    "evm",
    "evm-test-utils",
    "primitives",
] }
eyre = "0.6.12"
serde_json = "1.0.140"
bigdecimal = "0.4.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
config = "0.15.8"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = "0.12.5"
moka = { version = "0.12.10", features = ["future"] }
thiserror = "1.0.63"
dotenv = "0.15.0"
bon = "3.6.3"
chrono = "0.4.41"

[dev-dependencies]
wiremock = "0.6.3"
