[package]
name = "evm-watchers-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
alloy-primitives = "0.8.23"
alloy = { version = "1.0.7", features = [
    "full",
    "node-bindings",
    "eip712",
    "providers",
]}
async-trait = "0.1.88"
eyre = "0.6.12"
tars = { git = "https://github.com/TARS-Finance/Tars-rs.git", rev = "330492d5bd03f16859ae5b0e22924365617b8da9", features = [
    "orderbook",
    "orderbook-test-utils",
    "evm",
    "evm-test-utils",
    "utils",
    "primitives"
] }
sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "derive",
    "macros",
    "bigdecimal",
    "chrono",
    "json",
] }
alloy-sol-types = "1.2.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.36.0", features = ["full" , "rt"] }
moka = { version = "0.12.10", features = ["future"] }
thiserror = "2.0.12"
config = "0.15.13"
serde = "1.0.219"
num-traits = "0.2.19"
tokio-stream = "0.1.17"

[dev-dependencies]
serial_test = "3.2.0"
