[package]
name = "initia-executor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "initia-executor"
path = "src/main.rs"

[dependencies]
alloy = { version = "1.0", features = ["full"] }
# Pin to match TARS-rs alloy-primitives version to avoid getrandom API conflicts
alloy-primitives = { version = "=0.8.23", features = ["getrandom"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
eyre = "0.6"
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
orderbook = { git = "https://github.com/TARS-Finance/Tars-rs", rev = "2baeff0f7c5cb83a06e5fbb258414c374707dbf6", package = "orderbook" }
tars = { git = "https://github.com/TARS-Finance/Tars-rs", rev = "2baeff0f7c5cb83a06e5fbb258414c374707dbf6", features = ["fiat", "orderbook", "primitives"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
