[package]
name = "policy"
version.workspace = true
edition.workspace = true

[dependencies]
primitives.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bigdecimal.workspace = true
eyre.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true
api.workspace = true
tracing.workspace = true
arc-swap = "1.7.1"

[dev-dependencies]
wiremock.workspace = true
