[package]
name = "quote"
version.workspace = true
edition.workspace = true

[dependencies]
api.workspace = true
bigdecimal.workspace = true
eyre.workspace = true
moka.workspace = true
orderbook.workspace = true
primitives.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
